--- a/gleam.toml
+++ b/gleam.toml
@@ -19,6 +19,8 @@ gleam_regexp = ">= 1.0.0 and < 2.0.0"
 glearray = ">= 1.0.0 and < 2.0.0"
 gleam_otp = ">= 0.14.1 and < 1.0.0"
 birl = ">= 1.7.1 and < 2.0.0"
+carpenter = ">= 0.3.1 and < 1.0.0"
+gleam_erlang = ">= 0.33.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
