--- a/gleam.toml
+++ b/gleam.toml
@@ -23,6 +23,7 @@ carpenter = ">= 0.3.1 and < 1.0.0"
 gleam_erlang = ">= 0.33.0 and < 1.0.0"
 gleamy_structures = ">= 1.1.0 and < 2.0.0"
 gleam_deque = ">= 1.0.0 and < 2.0.0"
+gleam_community_maths = ">= 1.1.1 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
